cập nhật toàn bộ backend : ai recommendation , ai compare , chatbot ; tích hợp vnpay , momo vào thanh toán DONE

--- a/BE/.env
+++ b/BE/.env
@@ -7,7 +7,17 @@ SECRET_CRYPTO="123456"
 USER_EMAIL=""
 CLIENT_ID=""
 CLIENT_SECRET=""
-REDIRECT_URI='https://developers.google.com/oauthplayground' 
+REDIRECT_URI='' 
 REFRESH_TOKEN=""
 
 API_KEY_GEMINI=""
+
+USE_CLOUDINARY=true
+CLOUDINARY_NAME=""
+CLOUDINARY_KEY=""
+CLOUDINARY_SECRET=""
+
+VNPAY_TMN_CODE=""
+VNPAY_SECRET=""
+VNPAY_HOST=https://sandbox.vnpayment.vn
+VNPAY_TEST_MODE=true
