--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,34 +1,46 @@
 server {
     listen 80;
+    server_name techify.asia www.techify.asia;
 
-    # Serve React app
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    server_name localhost;
+    # Chuyển hướng tất cả yêu cầu HTTP sang HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name techify.asia www.techify.asia;
+
+    ssl_certificate /etc/nginx/ssl/techify.asia.pem;
+    ssl_certificate_key /etc/nginx/ssl/techify.asia.key;
 
     client_max_body_size 100M;
 
+
+    # Phục vụ tệp tĩnh và SPA
     location / {
         try_files $uri /index.html;
     }
 
-    # Proxy API to Node.js
-    location /api/ {
+    # Proxy cho API
+    location /api {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
-    # Proxy WebSocket connections
 
-     location /socket.io {
-        proxy_pass http://backend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+    # Header bảo mật
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Frame-Options DENY;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # Log
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
