--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
                   username: ${{ secrets.EC2_USER }}
                   password: ${{ secrets.EC2_SSH_KEY }}
                   script: |
-                      cd ~/whatapps
+                      cd ~/FinalProject
                       git pull origin main
                       docker compose down
                       docker compose build
