--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
         volumes:
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
             - ./client/dist:/usr/share/nginx/html
-            ./nginx/ssl:/etc/nginx/ssl
+            - ./nginx/ssl:/etc/nginx/ssl
         depends_on:
             - backend
 
