--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name techify.asia www.techify.asia;
 
     # Chuyển hướng tất cả yêu cầu HTTP sang HTTPS
-    return 301 https://$host$request_uri;
+    # return 301 https://$host$request_uri;
 }
 
 server {
