--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,6 +16,6 @@ COPY . .
 # Production Stage
 FROM nginx:stable-alpine
 
-COPY --from=build dist /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
