--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name techify.asia www.techify.asia;
 
     # Chuyển hướng tất cả yêu cầu HTTP sang HTTPS
-    # return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -15,12 +15,12 @@ server {
 
     client_max_body_size 100M;
 
+    # Định nghĩa thư mục gốc từ volume
     root /usr/share/nginx/html;
-
 
     # Phục vụ tệp tĩnh và SPA
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     # Proxy cho API
@@ -34,6 +34,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+    }
+
+
+    # Xử lý favicon.ico
+    location = /favicon.ico {
+        try_files /favicon.ico =404;
     }
 
     # Header bảo mật
