--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-CONNECT_DB ="mongodb+srv://ttluan113:GAIwTWb0MN1sLnD1@cluster0.yeunwxf.mongodb.net/"
+CONNECT_DB ="mongodb+srv://longduongbao13:8G66q41ByBi0NTa0@techify.visigys.mongodb.net/?retryWrites=true&w=majority&appName=techify"
 CLIENT_URL='https://techify.asia:5173'
 
 SECRET_CRYPTO="123456"
