--- a/BE/.env
+++ b/BE/.env
@@ -3,6 +3,8 @@ CLIENT_URL='https://techify.asia:5173'
 
 SECRET_CRYPTO="123456"
 
+RESEND_API_KEY="re_VZgbHy6q_CxcenhDvkbxo519YtP4PGQ1T"
+
 
 USER_EMAIL="techify.asia@gmail.com"
 CLIENT_ID="693672223184-qd07ctj77mqm8ifb1l3pmubgfa7ihvk2.apps.googleusercontent.com"
