--- a/BE/package.json
+++ b/BE/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.1.9",
     "npm": "^11.2.0",
     "otp-generator": "^4.0.1",
+    "resend": "^6.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "vnpay": "^2.1.1"
